Fixed login function
fixed the login function on app.py and edited the login/signup page's code to work with app.py. Nothing cosmetic was changed.

--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <form action="{{ url_for('login') }}" method="POST">
+        <form action="form_login" method="POST">
             <a href="{{ url_for('home') }}"><h1>Login</h1></a>
             <div class="input-box">
                 <input type="text" name="username" placeholder="Username" required>
@@ -24,7 +24,7 @@
                 <a href="#">Forgot Password</a>
             </div>
 
-            <button type="submit" class="button">Login</button>
+            <input type="submit" class="button" value="Login"></input>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="{{ url_for('signup') }}">Register</a></p>
