--- a/templates/signup_page.html
+++ b/templates/signup_page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <form action="{{ url_for('signup') }}" method="POST">
+        <form action="form_signup" method="POST">
             <a href="{{ url_for('home') }}"><h1>Sign Up</h1></a>
             <div class="input-box">
                 <input type="email" name="email" placeholder="Email" required>
@@ -28,7 +28,7 @@
                 <input type="password" name="confirm_password" placeholder="Confirm Password" required>
             </div>
 
-            <button type="submit" class="button">Create</button>
+            <input type="submit" class="button" value="Create"></input>
 
             <div class="login-link">
                 <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
